--- a/index.html
+++ b/index.html
@@ -198,14 +198,6 @@
             transform: translateY(-5px);
         }
 
-        .info-box img {
-            width: 100%;
-            height: 150px;
-            object-fit: cover;
-            border-radius: 10px;
-            margin-bottom: 15px;
-        }
-
         .info-box i {
             font-size: 2em;
             color: #27ae60;
@@ -265,7 +257,7 @@
             display: inline-block;
             width: 200px;
             margin: 10px;
-            flex-shrink: 0; /* Prevent shrinking on desktop */
+            flex-shrink: 0;
         }
 
         .carousel-item img {
@@ -275,7 +267,7 @@
             border-radius: 10px;
             border: 3px solid #27ae60;
             transition: transform 0.3s, box-shadow 0.3s;
-            display: block; /* Ensure images are treated as block elements */
+            display: block;
         }
 
         .carousel-item img:hover {
@@ -403,18 +395,13 @@
                 font-size: 1em;
             }
 
-            .carousel-row {
-                flex-direction: column;
-                animation: none;
-            }
-
             .carousel-item {
-                width: 100%;
-                margin: 10px 0;
+                width: 150px;
+                margin: 5px;
             }
 
             .carousel-item img {
-                height: 200px;
+                height: 100px;
             }
 
             .info-grid {
@@ -436,12 +423,13 @@
                 font-size: 2em;
             }
 
-            .carousel-item img {
-                height: 150px;
+            .carousel-item {
+                width: 120px;
+                margin: 3px;
             }
 
-            .info-box img {
-                height: 120px;
+            .carousel-item img {
+                height: 80px;
             }
         }
 
@@ -508,7 +496,6 @@
         <h2>Защо да изберете нас</h2>
         <div class="info-grid">
             <div class="info-box" style="background-color: #fff3e0;">
-                
                 <i class="fas fa-wrench"></i>
                 <h3>Широк набор от услуги</h3>
                 <p>От аварийно отваряне до изработка на ключове – ние сме готови да помогнем за дома, колата или офиса ви!</p>
@@ -542,7 +529,6 @@
                 <div class="carousel-item"><img src="15.jpg" alt="Gallery Image 10"></div>
                 <div class="carousel-item"><img src="17.jpg" alt="Gallery Image 11"></div>
                 <div class="carousel-item"><img src="33.jpg" alt="Gallery Image 12"></div>
-
             </div>
             <div class="carousel-row bottom">
                 <div class="carousel-item"><img src="44.jpg" alt="Gallery Image 13"></div>
@@ -557,7 +543,6 @@
                 <div class="carousel-item"><img src="555.jpg" alt="Gallery Image 22"></div>
                 <div class="carousel-item"><img src="666.jpg" alt="Gallery Image 23"></div>
                 <div class="carousel-item"><img src="888.jpg" alt="Gallery Image 24"></div>
-
             </div>
         </div>
     </section>
@@ -587,15 +572,6 @@
     <a href="#home" class="back-to-top" title="Върни се нагоре">⇧</a>
 
     <script type="text/javascript">
-        var gk_isXlsx = false;
-        var gk_xlsxFileLookup = {};
-        var gk_fileData = {};
-
-        function filledCell(cell) {
-            return cell !== '' && cell != null;
-        }
-
-
         const hamburger = document.querySelector('.hamburger');
         const navMenu = document.querySelector('.nav-menu');
 
