--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
-        /* ================================================================ */
-        /* EXISTING CSS (NO CHANGES HERE FOR NOW, BUT REVIEW THE HERO SECTION) */
-        /* ================================================================ */
+   
         * {
             margin: 0;
             padding: 0;
@@ -25,11 +23,11 @@
             animation: bgFade 15s infinite ease-in-out;
         }
 
-        /* Add a class for when the body scroll is locked */
+      
         body.no-scroll {
             overflow: hidden;
-            /* Consider if you need to adjust fixed elements here for scrollbar width */
-            padding-right: var(--scrollbar-width, 0px); /* Will be set by JS */
+            
+            padding-right: var(--scrollbar-width, 0px); 
         }
 
 
@@ -40,7 +38,7 @@
         }
 
         .navbar {
-            background-color: rgba(44, 62, 80, 0.8);
+            background-color: rgba(0, 150, 110, 0.8);
             position: sticky;
             top: 0;
             z-index: 1000;
