--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         .nav-menu {
             display: flex;
             align-items: center;
-            background: linear-gradient(90deg, #ffffff 0%, #00966e 100%);
+            background-color: rgba(0, 150, 110, 0.8); 
             border-radius: 15px;
             padding: 2px 10px;
             box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
