--- a/index.html
+++ b/index.html
@@ -1004,18 +1004,18 @@
         <div class="services-grid">
             <div class="service-item">
                 <i class="fas fa-unlock-alt"></i>
-                <h3>Авариен ключар</h3>
-                <p>Бързо и безопасно отваряне на врати при загубени ключове или повредени брави. Аварийно отключване на секретни патрони, метални шкафове, както и демонтаж на блокирал патрон с монтаж на нов.</p>
+                <h3>Аварийно отключване на автомобили</h3>
+                <p>Бързо и безопасно отваряне на врати при загубени ключове или повредени брави и патрони. Аварийно отключване на секретни патрони, метални шкафове, както и демонтаж на блокирал патрон с монтаж на нов.</p>
             </div>
             <div class="service-item">
                 <i class="fas fa-tools"></i>
-                <h3>Ремонт и смяна на брави</h3>
-                <p>Професионална подмяна и ремонт на всякакви видове брави, включително демонтаж на старата повредена брава и монтаж на нова.</p>
+                <h3>Ремонт и смяна на брави и патрони</h3>
+                <p>Професионална подмяна и ремонт на всякакви видове брави и патрони, включително демонтаж на старата повредена брава и монтаж на нова.</p>
             </div>
             <div class="service-item">
                 <i class="fas fa-key"></i>
-                <h3>Изработка и автоключарски услуги</h3>
-                <p>Изработваме ключове за дома, офиса или автомобили. Можем да създадем нов ключ според вашия патрон или да отворим и програмираме автоключове при нужда.</p>
+                <h3>Автоключарски услуги</h3>
+                <p>Изработваме ключове за всички марки автомобили. Можем да създадем нов ключ според вашия патрон или да програмираме нов ключ при нужда.</p>
             </div>
         </div>
     </section>
@@ -1095,12 +1095,12 @@
             <div class="faq-answer">В повечето случаи – да. Изработваме ключ по ключалка, но процесът отнема повече време и изисква оглед.</div>
         </div>
         <div class="faq-item">
-            <div class="faq-question">Изработвате ли авто ключове с чип?</div>
-            <div class="faq-answer">Да, предлагаме дублиране на авто ключове с чип за много марки и модели. Свържи се с нас предварително, за да проверим дали можем да обслужим твоя автомобил.</div>
+            <div class="faq-question">Изработвате ли авто ключове с чип и дистанционно?</div>
+            <div class="faq-answer">Да, предлагаме изработка на авто ключове с чип и дистанционно за всички марки и модели. Свържи се с нас!.</div>
         </div>
         <div class="faq-item">
             <div class="faq-question">Какви видове ключове изработвате?</div>
-            <div class="faq-answer">Изработваме всички видове – обикновени, секретни, касови, патронни, специализирани ключове и автомобилни.</div>
+            <div class="faq-answer">Изработваме всички видове – обикновени, секретни, касови, специални ключове и автомобилни.</div>
         </div>
         <div class="faq-item">
             <div class="faq-question">Трябва ли да запиша час?</div>
