--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
         .services {
             padding: 60px 20px;
-            background: linear-gradient(135deg, #ffffff 50%, #f5f0d0 50%);
+           background: linear-gradient(135deg, #ff9696 50%, #ffffff 50%);
             text-align: center;
             border-bottom: 2px solid rgba(0, 150, 110, 0.3);
             position: relative;
@@ -234,7 +234,7 @@
             font-size: 2.5em;
             margin-bottom: 40px;
             animation: slideInUp 1s ease-out;
-            color: #00966e;
+            color: #000000;
             text-shadow: 0 0 5px #ffffff;
         }
 
@@ -288,7 +288,7 @@
 
         .info-sections {
             padding: 60px 20px;
-            background: linear-gradient(135deg, #f5f0d0 50%, #ffffff 50%);
+           background: linear-gradient(135deg, #ff9696 50%, #ffffff 50%);
             text-align: center;
             border-bottom: 2px solid rgba(0, 150, 110, 0.3);
             position: relative;
@@ -299,7 +299,7 @@
             font-size: 2.5em;
             margin-bottom: 40px;
             animation: slideInUp 1s ease-out;
-            color: #00966e;
+            color: #000000;
             text-shadow: 0 0 5px #ffffff;
         }
 
@@ -359,7 +359,7 @@
 
         .gallery {
             padding: 60px 20px;
-            background: linear-gradient(135deg, #ffffff 50%, #f5f0d0 50%);
+          background: linear-gradient(135deg, #ff9696 50%, #ffffff 50%);
             text-align: center;
             border-bottom: 2px solid rgba(0, 150, 110, 0.3);
             position: relative;
@@ -370,7 +370,7 @@
             font-size: 2.5em;
             margin-bottom: 40px;
             animation: slideInUp 1s ease-out;
-            color: #00966e;
+            color: #000000;
             text-shadow: 0 0 5px #ffffff;
         }
 
@@ -452,7 +452,7 @@
             font-family: 'Roboto', sans-serif;
             font-size: 1.8em;
             margin: 20px 0 10px;
-            color: #00966e;
+            color: #000000;
             text-shadow: 0 0 5px #ffffff;
         }
 
@@ -463,7 +463,7 @@
 
         .about {
             padding: 60px 20px;
-            background: linear-gradient(135deg, #f5f0d0 50%, #ffffff 50%);
+          background: linear-gradient(135deg, #ff9696 50%, #ffffff 50%);
             text-align: center;
             border-bottom: 2px solid rgba(0, 150, 110, 0.3);
             position: relative;
@@ -474,7 +474,7 @@
             font-size: 2.5em;
             margin-bottom: 40px;
             animation: slideInUp 1s ease-out;
-            color: #00966e;
+            color: #000000;
             text-shadow: 0 0 5px #ffffff;
         }
 
@@ -494,7 +494,7 @@
             max-width: 800px;
             margin: 0 auto;
             font-size: 1.1em;
-            color: #666;
+            color: #171717;
         }
 
         .about-gallery {
@@ -520,7 +520,7 @@
 
         .contact {
             padding: 60px 20px;
-            background: linear-gradient(135deg, #ffffff 50%, #f5f0d0 50%);
+            background: linear-gradient(135deg, #ff9696 50%, #ffffff 50%);
             text-align: center;
             border-bottom: 2px solid rgba(0, 150, 110, 0.3);
             position: relative;
@@ -531,7 +531,7 @@
             font-size: 2.5em;
             margin-bottom: 40px;
             animation: slideInUp 1s ease-out;
-            color: #00966e;
+            color: #000000;
             text-shadow: 0 0 5px #ffffff;
         }
 
@@ -570,7 +570,7 @@
             max-width: 500px;
             margin: 20px auto;
             border-collapse: collapse;
-            background: linear-gradient(135deg, #ffffff, #f5f0d0);
+            background: linear-gradient(135deg, #ffffff, #ebfff1);
             border-radius: 10px;
             overflow: hidden;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -589,7 +589,7 @@
             color: #ffffff;
             font-family: 'Roboto', sans-serif;
             font-weight: 600;
-            text-shadow: 0 0 5px #ffffff;
+           
         }
 
         .working-hours-table td {
@@ -713,7 +713,7 @@
 
         .faq {
             padding: 60px 20px;
-            background: linear-gradient(135deg, #f5f0d0 50%, #ffffff 50%);
+            background: linear-gradient(135deg, #ff9696 50%, #ffffff 50%);
             text-align: center;
             border-bottom: 2px solid rgba(0, 150, 110, 0.3);
             position: relative;
@@ -724,7 +724,7 @@
             font-size: 2.5em;
             margin-bottom: 40px;
             animation: slideInUp 1s ease-out;
-            color: #00966e;
+            color: #000000;
             text-shadow: 0 0 5px #ffffff;
         }
 
@@ -743,7 +743,7 @@
         .faq-item {
             max-width: 800px;
             margin: 0 auto 20px;
-            background: linear-gradient(135deg, #ffffff, #f5f0d0);
+            background: linear-gradient(135deg, #ffffff, #ffffff);
             border: 2px solid #00966e;
             border-radius: 10px;
             overflow: hidden;
@@ -782,7 +782,7 @@
             padding: 15px 20px;
             font-size: 1em;
             color: #666;
-            background: rgba(245, 240, 208, 0.8);
+            background: rgba(225, 255, 227, 0.8);
             display: none;
             text-align: left;
         }
