--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
         .services {
             padding: 60px 20px;
-           background: linear-gradient(135deg, #ff9696 50%, #ffffff 50%);
+            background: linear-gradient(135deg, #FFFFFF 20%, #009B7A 50%, #D2232C 80%);
             text-align: center;
             border-bottom: 2px solid rgba(0, 150, 110, 0.3);
             position: relative;
@@ -288,7 +288,7 @@
 
         .info-sections {
             padding: 60px 20px;
-           background: linear-gradient(135deg, #ff9696 50%, #ffffff 50%);
+            background: linear-gradient(135deg, #FFFFFF 20%, #009B7A 50%, #D2232C 80%);
             text-align: center;
             border-bottom: 2px solid rgba(0, 150, 110, 0.3);
             position: relative;
@@ -359,7 +359,7 @@
 
         .gallery {
             padding: 60px 20px;
-          background: linear-gradient(135deg, #ff9696 50%, #ffffff 50%);
+            background: linear-gradient(135deg, #FFFFFF 20%, #009B7A 50%, #D2232C 80%);
             text-align: center;
             border-bottom: 2px solid rgba(0, 150, 110, 0.3);
             position: relative;
@@ -463,7 +463,7 @@
 
         .about {
             padding: 60px 20px;
-          background: linear-gradient(135deg, #ff9696 50%, #ffffff 50%);
+            background: linear-gradient(135deg, #FFFFFF 20%, #009B7A 50%, #D2232C 80%);
             text-align: center;
             border-bottom: 2px solid rgba(0, 150, 110, 0.3);
             position: relative;
@@ -494,7 +494,7 @@
             max-width: 800px;
             margin: 0 auto;
             font-size: 1.1em;
-            color: #171717;
+            color: #000000;
         }
 
         .about-gallery {
@@ -520,7 +520,7 @@
 
         .contact {
             padding: 60px 20px;
-            background: linear-gradient(135deg, #ff9696 50%, #ffffff 50%);
+            background: linear-gradient(135deg, #FFFFFF 20%, #009B7A 50%, #D2232C 80%);
             text-align: center;
             border-bottom: 2px solid rgba(0, 150, 110, 0.3);
             position: relative;
@@ -555,7 +555,7 @@
         }
 
         .contact-info a {
-            color: #00966e;
+            color: #006b51;
             text-decoration: none;
             transition: color 0.3s, text-shadow 0.3s;
         }
@@ -570,7 +570,7 @@
             max-width: 500px;
             margin: 20px auto;
             border-collapse: collapse;
-            background: linear-gradient(135deg, #ffffff, #ebfff1);
+            background: linear-gradient(135deg, #ffffff, #f5f0d0);
             border-radius: 10px;
             overflow: hidden;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -589,7 +589,7 @@
             color: #ffffff;
             font-family: 'Roboto', sans-serif;
             font-weight: 600;
-           
+            text-shadow: 0 0 5px #ffffff;
         }
 
         .working-hours-table td {
@@ -713,7 +713,7 @@
 
         .faq {
             padding: 60px 20px;
-            background: linear-gradient(135deg, #ff9696 50%, #ffffff 50%);
+            background: linear-gradient(135deg, #FFFFFF 20%, #009B7A 50%, #D2232C 80%);
             text-align: center;
             border-bottom: 2px solid rgba(0, 150, 110, 0.3);
             position: relative;
@@ -743,7 +743,7 @@
         .faq-item {
             max-width: 800px;
             margin: 0 auto 20px;
-            background: linear-gradient(135deg, #ffffff, #ffffff);
+            background: linear-gradient(135deg, #FFFFFF 20%, #009B7A 50%, #D2232C 80%);
             border: 2px solid #00966e;
             border-radius: 10px;
             overflow: hidden;
@@ -836,7 +836,7 @@
                 position: absolute;
                 top: 40px;
                 left: 0;
-                background: linear-gradient(135deg, #00966e, #ffffff);
+                background: #d9ffdd;
                 border-radius: 15px;
                 padding: 5px;
                 box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
@@ -853,7 +853,7 @@
                 text-align: center;
                 width: 100%;
                 font-size: 0.8em;
-                color: #ffffff;
+                color: #000000;
             }
 
             .hero h1 {
@@ -965,6 +965,9 @@
                 transform: translateY(0);
             }
         }
+
+
+        
     </style>
 </head>
 <body>
@@ -1124,8 +1127,8 @@
     <section id="contact" class="contact">
         <h2>Контакти</h2>
         <div class="contact-info">
-            <p><strong>Адрес:</strong> ул. "Цар Иван Александър" 5, Ямбол</p>
-            <p><strong>Телефон:</strong> <a href="tel:0878101524">087 810 1524</a></p>
+            <p><strong >Адрес:</strong> ул. "Цар Иван Александър" 5, Ямбол</p>
+            <p><strong class="123">Телефон:</strong> <a href="tel:0878101524">087 810 1524</a></p>
             <p><strong>Имейл:</strong> <a href="mailto:key1yambol@gmail.com">key1yambol@gmail.com</a></p>
             <table class="working-hours-table">
                 <tr>
