--- a/index.html
+++ b/index.html
@@ -39,13 +39,14 @@
         }
 
         .navbar {
-            background-color: rgba(0, 150, 110, 0.8);
+            background-color: rgba(0, 150, 110, 0.95);
             position: sticky;
             top: 0;
             z-index: 1000;
-            padding: 5px 0;
+            padding: 10px 0;
             backdrop-filter: blur(5px);
             border-bottom: 2px solid rgba(255, 255, 255, 0.3);
+            width: 100%;
         }
 
         .navbar .container {
@@ -89,19 +90,25 @@
 
         .hamburger {
             display: none;
-            font-size: 1.5em;
+            font-size: 1.05em;
             color: #ffffff;
             cursor: pointer;
-            padding: 5px;
+            padding: 5px 10px;
             text-shadow: 0 0 5px #00966e;
+            background: rgba(0, 0, 0, 0.2);
+            border-radius: 4px;
+            margin-left: auto;
         }
 
         .hero {
             background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('919.png');
+            min-height: 500px;
+            height: 75vh;
+            padding: 60px 20px;
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
-            height: 100vh;
+            height: 120vh;
             display: flex;
             align-items: center;
             text-align: center;
@@ -827,7 +834,11 @@
             }
 
             .navbar {
-                padding: 3px 0;
+                padding: 15px 0;
+                position: fixed;
+                top: 0;
+                left: 0;
+                right: 0;
             }
 
             .nav-menu {
@@ -835,12 +846,14 @@
                 flex-direction: column;
                 width: 100%;
                 position: absolute;
-                top: 40px;
+                top: 100%;
                 left: 0;
-                background: #d9ffdd;
-                border-radius: 15px;
-                padding: 5px;
-                box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+                background: rgba(0, 150, 110, 0.98);
+                border-radius: 0 0 10px 10px;
+                padding: 10px 0;
+                box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+                z-index: 1000;
+                margin: 0;
             }
 
             .nav-menu.active {
@@ -849,12 +862,23 @@
             }
 
             .nav-menu a {
-                margin: 5px 0;
-                padding: 6px;
-                text-align: center;
+                display: block;
+                margin: 0;
+                padding: 12px 20px;
+                text-align: left;
                 width: 100%;
-                font-size: 0.8em;
-                color: #000000;
+                font-size: 1em;
+                color: #ffffff;
+                transition: background-color 0.3s;
+                border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+            }
+            
+            .nav-menu a:last-child {
+                border-bottom: none;
+            }
+            
+            .nav-menu a:hover {
+                background-color: rgba(255, 255, 255, 0.1);
             }
 
             .hero h1 {
@@ -1007,11 +1031,74 @@
     </nav>
 
     <section id="home" class="hero">
-        <div class="hero-content">
-            <h1><span style="color: #FF0000;">NadiKey</span> - Вашият надежден ключар в Ямбол</h1>
-            <p>Доверен партньор за бързи и професионални ключарски услуги!</p>
+        <div class="hero-content" style="width: 100%;">
+<h1 style="margin-top: 3rem;">
+    <span style="color: #FF0000;">NadiKey</span> - Вашият надежден ключар в Ямбол
+</h1>            <p>Доверен партньор за бързи и професионални ключарски услуги!</p>
             <a href="#contact" class="cta-button">Свържете се с нас</a>
+            <div class="hero-images">
+                <div class="hero-image-container">
+                    <img src="1000025282.jpg" alt="Ключарски услуги 1" class="hero-image">
+                </div>
+                <div class="hero-image-container">
+                    <img src="1000025283.jpg" alt="Ключарски услуги 2" class="hero-image">
+                </div>
+            </div>
         </div>
+        <style>
+            .hero-images {
+                display: flex;
+                justify-content: center;
+                margin: 40px 0;
+                gap: 20px;
+                margin-top: 30px;
+                margin-bottom: 40px;
+                flex-wrap: nowrap; /* Prevent wrapping on mobile */
+                overflow-x: auto; /* Allow horizontal scrolling if needed */
+                padding-bottom: 10px; /* Space for scrollbar */
+                -webkit-overflow-scrolling: touch; /* Smooth scrolling on iOS */
+            }
+            .hero-image-container {
+                position: relative;
+                display: inline-block;
+                overflow: hidden;
+                border-radius: 10px;
+                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            }
+            .hero-image {
+                width: 200px;
+                height: 250px;
+                object-fit: cover;
+                display: block;
+                transition: transform 0.3s ease;
+                cursor: pointer;
+            }
+            /* Navigation arrows are now only in the modal */
+            .hero-image:hover {
+                transform: scale(1.05);
+            }
+            @media (max-width: 768px) {
+                .hero {
+                    min-height: 400px;
+                    height: 100vh;
+                    padding: 40px 20px;
+                }
+                .hero-content {
+                    margin-top: 20px;
+                }
+                .hero-images {
+                    gap: 10px;
+                    padding: 0 10px 15px;
+                    align-items: center;
+                }
+                .hero-image {
+                    width: 160px;
+                    height: 190px;
+                    flex-shrink: 0;
+                    object-fit: cover;
+                }
+            }
+        </style>
         <div class="key-anim" style="left: 10%; top: 20%; animation-delay: 0s;"></div>
         <div class="key-anim" style="left: 30%; top: 40%; animation-delay: 1s;"></div>
         <div class="key-anim" style="left: 50%; top: 60%; animation-delay: 2s;"></div>
@@ -1320,7 +1407,7 @@
         const closeModal = document.querySelector('.close');
         const prevButton = document.querySelector('.prev');
         const nextButton = document.querySelector('.next');
-        const images = document.querySelectorAll('.carousel-item img, .about-gallery img');
+        const images = document.querySelectorAll('.carousel-item img, .about-gallery img, .hero-image');
         let currentImageIndex = 0;
         let lastScrollY = 0; // To store scroll position
 
