--- a/index.html
+++ b/index.html
@@ -1032,9 +1032,9 @@
 
     <section id="home" class="hero">
         <div class="hero-content" style="width: 100%;">
-<h1 style="margin-top: 3rem;">
+<h1 style="margin-top: 6rem; margin-bottom: 1.5rem;">
     <span style="color: #FF0000;">NadiKey</span> - Вашият надежден ключар в Ямбол
-</h1>            <p>Доверен партньор за бързи и професионални ключарски услуги!</p>
+</h1>            <p style="margin-bottom: 2rem;">Доверен партньор за бързи и професионални ключарски услуги!</p>
             <a href="#contact" class="cta-button">Свържете се с нас</a>
             <div class="hero-images">
                 <div class="hero-image-container">
@@ -1049,14 +1049,13 @@
             .hero-images {
                 display: flex;
                 justify-content: center;
-                margin: 40px 0;
+                margin: 60px 0 40px;
                 gap: 20px;
-                margin-top: 30px;
-                margin-bottom: 40px;
-                flex-wrap: nowrap; /* Prevent wrapping on mobile */
-                overflow-x: auto; /* Allow horizontal scrolling if needed */
-                padding-bottom: 10px; /* Space for scrollbar */
-                -webkit-overflow-scrolling: touch; /* Smooth scrolling on iOS */
+                padding-top: 20px;
+                flex-wrap: nowrap;
+                overflow-x: auto;
+                padding-bottom: 10px;
+                -webkit-overflow-scrolling: touch;
             }
             .hero-image-container {
                 position: relative;
@@ -1066,8 +1065,8 @@
                 box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             }
             .hero-image {
-                width: 200px;
-                height: 250px;
+                width: 180px;  /* Reduced from 200px */
+                height: 225px;  /* Reduced from 250px */
                 object-fit: cover;
                 display: block;
                 transition: transform 0.3s ease;
@@ -1080,22 +1079,28 @@
             @media (max-width: 768px) {
                 .hero {
                     min-height: 400px;
-                    height: 100vh;
-                    padding: 40px 20px;
+                    height: auto;
+                    padding: 30px 15px 50px;
+                    display: flex;
+                    align-items: center;
                 }
                 .hero-content {
                     margin-top: 20px;
+                    padding-bottom: 20px;
                 }
                 .hero-images {
                     gap: 10px;
-                    padding: 0 10px 15px;
+                    margin-top: 70px;
+                    padding: 15px 10px 20px;
                     align-items: center;
+                    justify-content: center;
                 }
                 .hero-image {
-                    width: 160px;
-                    height: 190px;
+                    width: 100px;
+                    height: 130px;
                     flex-shrink: 0;
                     object-fit: cover;
+                    border-radius: 8px;
                 }
             }
         </style>
@@ -1513,3 +1518,4 @@
     </script>
 </body>
 </html>
+
