Resize hero image and update icon in info section

--- a/index.html
+++ b/index.html
@@ -1096,11 +1096,11 @@
                     justify-content: center;
                 }
                 .hero-image {
-                    width: 100px;
-                    height: 130px;
+                    width: 35px;
+                    height: 65px;
                     flex-shrink: 0;
                     object-fit: cover;
-                    border-radius: 8px;
+                    border-radius: 4px;
                 }
             }
         </style>
@@ -1137,7 +1137,7 @@
         <h2>Защо да изберете нас</h2>
         <div class="info-grid">
             <div class="info-box">
-                <i class="fas fa-wrench"></i>
+                <i class="fas fa-key"></i>
                 <h3>Широк набор от услуги</h3>
                 <p>От аварийно отваряне до изработка на ключове – ние сме готови да помогнем за дома, колата или офиса ви!</p>
             </div>
