--- a/index.html
+++ b/index.html
@@ -1036,74 +1036,7 @@
     <span style="color: #FF0000;">NadiKey</span> - Вашият надежден ключар в Ямбол
 </h1>            <p style="margin-bottom: 2rem;">Доверен партньор за бързи и професионални ключарски услуги!</p>
             <a href="#contact" class="cta-button">Свържете се с нас</a>
-            <div class="hero-images">
-                <div class="hero-image-container">
-                    <img src="1000025282.jpg" alt="Ключарски услуги 1" class="hero-image">
-                </div>
-                <div class="hero-image-container">
-                    <img src="1000025283.jpg" alt="Ключарски услуги 2" class="hero-image">
-                </div>
-            </div>
-        </div>
-        <style>
-            .hero-images {
-                display: flex;
-                justify-content: center;
-                margin: 60px 0 40px;
-                gap: 20px;
-                padding-top: 20px;
-                flex-wrap: nowrap;
-                overflow-x: auto;
-                padding-bottom: 10px;
-                -webkit-overflow-scrolling: touch;
-            }
-            .hero-image-container {
-                position: relative;
-                display: inline-block;
-                overflow: hidden;
-                border-radius: 10px;
-                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            }
-            .hero-image {
-                width: 180px;  /* Reduced from 200px */
-                height: 225px;  /* Reduced from 250px */
-                object-fit: cover;
-                display: block;
-                transition: transform 0.3s ease;
-                cursor: pointer;
-            }
-            /* Navigation arrows are now only in the modal */
-            .hero-image:hover {
-                transform: scale(1.05);
-            }
-            @media (max-width: 768px) {
-                .hero {
-                    min-height: 400px;
-                    height: auto;
-                    padding: 30px 15px 50px;
-                    display: flex;
-                    align-items: center;
-                }
-                .hero-content {
-                    margin-top: 20px;
-                    padding-bottom: 20px;
-                }
-                .hero-images {
-                    gap: 10px;
-                    margin-top: 70px;
-                    padding: 15px 10px 20px;
-                    align-items: center;
-                    justify-content: center;
-                }
-                .hero-image {
-                    width: 35px;
-                    height: 65px;
-                    flex-shrink: 0;
-                    object-fit: cover;
-                    border-radius: 4px;
-                }
-            }
-        </style>
+            
         <div class="key-anim" style="left: 10%; top: 20%; animation-delay: 0s;"></div>
         <div class="key-anim" style="left: 30%; top: 40%; animation-delay: 1s;"></div>
         <div class="key-anim" style="left: 50%; top: 60%; animation-delay: 2s;"></div>
@@ -1257,6 +1190,75 @@
             <img src="z2.jpg" alt="Ателие отпред 1">
             <img src="z3.jpg" alt="Ателие отпред 2">
         </div>
+        <h2>Сертификати</h2>
+        <div class="hero-images">
+                <div class="hero-image-container">
+                    <img src="1000025282.jpg" alt="Ключарски услуги 1" class="hero-image">
+                </div>
+                <div class="hero-image-container">
+                    <img src="1000025283.jpg" alt="Ключарски услуги 2" class="hero-image">
+                </div>
+            </div>
+        </div>
+        <style>
+            .hero-images {
+                display: flex;
+                justify-content: center;
+                margin: 60px 0 40px;
+                gap: 20px;
+                padding-top: 20px;
+                flex-wrap: nowrap;
+                overflow-x: auto;
+                padding-bottom: 10px;
+                -webkit-overflow-scrolling: touch;
+            }
+            .hero-image-container {
+                position: relative;
+                display: inline-block;
+                overflow: hidden;
+                border-radius: 10px;
+                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            }
+            .hero-image {
+                width: 180px;  /* Reduced from 200px */
+                height: 225px;  /* Reduced from 250px */
+                object-fit: cover;
+                display: block;
+                transition: transform 0.3s ease;
+                cursor: pointer;
+            }
+            /* Navigation arrows are now only in the modal */
+            .hero-image:hover {
+                transform: scale(1.05);
+            }
+            @media (max-width: 768px) {
+                .hero {
+                    min-height: 400px;
+                    height: auto;
+                    padding: 30px 15px 50px;
+                    display: flex;
+                    align-items: center;
+                }
+                .hero-content {
+                    margin-top: 20px;
+                    padding-bottom: 20px;
+                }
+                .hero-images {
+                    gap: 10px;
+                    margin-top: 70px;
+                    padding: 15px 10px 20px;
+                    align-items: center;
+                    justify-content: center;
+                }
+                .hero-image {
+                    width: 35px;
+                    height: 65px;
+                    flex-shrink: 0;
+                    object-fit: cover;
+                    border-radius: 4px;
+                }
+            }
+        </style>
     </section>
 
     <section id="contact" class="contact">
